2005-07-07  Lillian Angel  <langel@redhat.com>
	* javax/swing/plaf/basic/BasicTreeUI.java
	Formatted code so else's are on new lines

2005-07-07  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	Formatted code to get rid of TABs        
	(getPathForRow): took out redundant code.
	(getNextVisibleNode): took out redundant code.

2005-07-07  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicTextUI.java
	(DocumentHandler.insertUpdate): Update caret position when document
	changes.
	(DocumentHandler.removeUpdate): Update caret position when document
	changes.

2005-07-07  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/FocusManager.java: New class. Provides a concrete
	implementation of javax.swing.FocusManager so that we can support
	the old-style FocusManager in Swing and AWT.
	* gnu/classpath/SystemProperties.java: Add new system property
	gnu.java.awt.FocusManager that sets the class that should be used
	as the default FocusManager in AWT and Swing.
	* java/awt/KeyboardFocusManager.java
	(setCurrentKeyboardFocusManager): Use createFocusManager instead
	of creating the instance directly.
	(createFocusManager): New method. Instantiate a KeyboardFocusManager
	that is set by the system property gnu.java.awt.FocusManager.
	* javax/swing.FocusManager.java
	(constructor): Call super() here.
	(getCurrentManager): Return the current AWT KeyboardFocusManager
	here.
	(setCurrentManager): Set the current AWT KeyboardFocusManager
	here.
	(processKeyEvent): Removed method. This is no longer in the
	API.
	(focusNextComponent): Removed method. This is no longer in the
	API.
	(focusPreviousComponent): Removed method. This is no longer in the
	API.

2005-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JProgressBar.java
	(JProgressBar(int, int, int)): fix order of parameters,
	(JProgressBar()): reorder arguments in call to other constructor,
	(JProgressBar(int): likewise,
	(JProgressBar(int, int): likewise.
	